--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 				</label>
 			</div>
 
+			<div class="choice" id="choice_2">
+				<span class="choice_label" id="choice_label_2">Seed</span>
+				<input type="text"/>
+			</div>
+
 			<div id=button_1>
 				<button class="my_button" id="clear">Clear</button>
 			</div>
