--- a/3d/index.html
+++ b/3d/index.html
@@ -1,9 +1,17 @@
+
+<!--
+https://websim.ai/c/6VtVN0iSDlDgV3BIR 
+Continue development on websim on new prompt with:
+- See if you can start a web app from this code, leave the code as is... It already works.
+
+Interesting prompts:
+1. Place holes in the floor that you must jump to get over.   Also oscillating orbs of light in the path.
+2. Now, the holes must be full of lethal lava.   The orbs must have different colors and they have to follow you very slowly. 
+-->
 <html>
 <head>
-    <base href="https://example.com">
     <title>3D Labyrinth Explorer</title>
     <style>
-        /* https://websim.ai/c/6VtVN0iSDlDgV3BIR */
         body { margin: 0; overflow: hidden; font-family: Arial, sans-serif; }
         canvas { display: block; }
         #menu, #instructions {
