--- a/3d/index.html
+++ b/3d/index.html
@@ -7,6 +7,9 @@ Continue development on websim on new prompt with:
 Interesting prompts:
 1. Place holes in the floor that you must jump to get over.   Also oscillating orbs of light in the path.
 2. Now, the holes must be full of lethal lava.   The orbs must have different colors and they have to follow you very slowly. 
+
+Creating an Orb:
+https://chatgpt.com/c/66ebd04b-91c8-8005-be45-a9c56f4aa07c
 -->
 <html>
 <head>
